--- a/food.html
+++ b/food.html
@@ -1,16 +1,30 @@
+
+
+
 <!DOCTYPE html>
-<html>
- <meta charset="UTF-8" />
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="renderer" content="webkit">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="author" content="NTU CSIE Information System Training Course">
+	<meta name="keywords" content="Keyword 1,Keyword 2">
+	<meta name="description" content="description">
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="apple-touch-icon" href="/favicon.png">
+	<link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="food.css" >
 	<title>VG Café Taipei</title>
 </head>
 <body>
-<body style="background-color:black;">
 
+<div class="tittle">
+<p>VG Café Taipei</p>
+</div>
 
-<p><font color="white" size="6">VG Café Taipei</font></p>
-
-<p><font color="white"><p>提供西式料理的小酒館，吃飽的話有排餐、燉飯、義大利麵，喝酒的話也有許多前菜，單價大約落在400左右。
+<p>提供西式料理的小酒館，吃飽的話有排餐、燉飯、義大利麵，喝酒的話也有許多前菜，單價大約落在400左右。
 </p>
 
 <img src="01.JPG" alt="環境" width="800" height="600"/>
@@ -20,7 +34,7 @@
 
 <p><a href="https://www.facebook.com/VGTPE" title="FB">Facebook</a></p>
 
-<p><font color="white"><p>台北市大安區復興南路一段279巷4號 ( 近大安站 )</p>
+<p><p>台北市大安區復興南路一段279巷4號 ( 近大安站 )</p>
 <p>02 2706 1068</p>
 
 <p>週一-週六:12:00 - 16:00/18:00 - 2:00</p>
