--- a/resume2.html
+++ b/resume2.html
@@ -18,13 +18,45 @@
 </head>
 <body>
 
-<p>行銷＠沃草 2014 - now</p>
+<div id="myphoto">
+<img src="myphoto.jpg" alt="" width="200px" height="200px">
+</div>
+
+<div class="tittle">
+<p>ABOUT ME</p>
+</div>
+
+<div class="context">
+<p>很愛臺灣，特別關注土地與生活的連結，更喜歡研究相關的一切。對於有興趣的事物，專注投入且喜歡挑戰，時常迸發各種可能性，追求創新。充滿熱情，且樂於分享。</p>
+</div>
+
+<div class="context">
+<p>重視生活空間的美感營造，喜歡嘗試動手做做看。即便只剩深夜有空，也堅持要研究生活遇到的各種困惑。例如果實酒到底怎麼釀，雖然至今還沒有成功。最近研究的主題是蛋糕，正在認真地在上烘焙檢定課程以及練習寫程式。</p>
+</div>
+
+<div class="tittle">
+<p>EDUCATION</p></div>
+
+<p>政治大學廣播電視學系</p>
+<p>創意學程</p>
+
+<div class="tittle">
+<p>EXPERIENCE</p></div>
+
+<p>行銷＠沃草 2014 - 2016</p>
+
+
+<div class="context">
 </p>與一群熱血夥伴所嘗試的網路社會實驗，致力於使用新媒體降低公民參與政治的門檻。透過生活中「趣」政治的方式，讓更多公民關心自己所處的社會。我的工作是轉譯與推廣，負責照顧吉祥物「阿草」，經營粉專及社群。思考如何將看似遙遠的政治問題，以漫畫、現場直播、互動式網站各種有趣美味的包裝，引起閱聽人的共鳴。</p>
+</div>
 
 </p>行銷@台灣好農 2012-2014</p>
+
+
+<div class="context">
 </p>到臺灣各個角落挖掘用心的生產者，以影像記錄農人工作樣貌與他們辛苦培育出的作物，書寫下每個土地與生產者的故事。讓更多人不用親臨現場，也能認識這些默默為臺灣土地付出的農人， 透過故事體驗那份美好。
 另外一方面，也經營十多個消費者相對熟悉的通路，作為一個溝通橋樑，促成更多合作，讓許多不同的族群有機會認識這些友善環境的食物，以實際消費支持理念。</p>
-
+</div>
 	
 </body>
 </html>
