--- a/rwd.html
+++ b/rwd.html
@@ -37,7 +37,7 @@
             <div class="learn-more">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-3 col-xs-6">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="box1">
                             <img src="cover.jpg" alt="" height="150px">
                             <h3>Feature Label</h3>
@@ -47,7 +47,7 @@
                           </div>
                         </div>
                         
-                        <div class="col-md-3 col-xs-6">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
                             <img src="cover.jpg" alt="" height="150px">
                             <h3>Feature Label</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, pariatur.</p>
@@ -55,7 +55,7 @@
                             <a class="btn btn-default" href="#">More Info</a>
                         </div>
 
-                        <div class="col-md-3 col-xs-6">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
                             <img src="cover.jpg" alt="" height="150px">
                             <h3>Feature Label</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, pariatur.</p>
@@ -63,7 +63,7 @@
                             <a class="btn btn-default" href="#">More Info</a>
                         </div>
 
-                        <div class="col-md-3 col-xs-6">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
                             <img src="cover.jpg" alt="" height="150px">
                             <h3>Feature Label</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, pariatur.</p>
