--- a/3.html
+++ b/3.html
@@ -18,9 +18,9 @@
 <body>
  
 <div id="sitebody">
-<div id="header">Lemon Pie</div>
+<div id="header">Today dessert</div>
 <div id="sidebar_left"></div>
-<div id="sidebar_right">sidebar_right</div>
+<div id="sidebar_right"></div>
 <div id="content"> 
 
 
