--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
 
 <div class="row">
         <div class="menu"> 
-         <a href="food2.html">  
+         <a target="_new" href="food2.html">  
         <img src="cake.png" class="img-responsive" alt="" height="300px" /> 
       <p>食記html</p>
    </a>
         </div>
         
         <div class="menu">
-         <a href="food.html">
+         <a target="_new" href="food.html">
         <img src="cabin.png" class="img-responsive" alt="" height="300px" /> 
         <p>食記css</p>
            </a>
         </div>
 
       <div class="menu">  
-<a href="resume.html">
+<a target="_new" href="resume.html">
       <img src="circus.png" class="img-responsive" alt="" height="300px" /> 
        <p>履歷html</p>
     </a>
@@ -93,21 +93,21 @@
 
 <div class="row">
         <div class="menu"> 
-<a href="resume2.html">
+<a target="_new" href="resume2.html">
         <img src="game.png" class="img-responsive" alt="" height="300px" /> 
           <p>履歷css</p>
            </a>
         </div>
         
         <div class="menu">
-         <a href="3.html">
+         <a target="_new" href="3.html">
         <img src="safe.png" class="img-responsive" alt="" height="300px" /> 
           <p>三欄式</p> 
         </a>
         </div>
 
      <div class="menu">
-         <a href="rwd.html">
+         <a target="_new" href="rwd.html">
         <img src="submarine.png" class="img-responsive" alt="" height="300px" /> 
           <p> RWD </p> 
         </a>
