--- a/rwd.html
+++ b/rwd.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
     <link rel="stylesheet" href="assets/styles/main.css">
       <link rel="stylesheet" href="bssample.css">
+       <title>Rwd</title>
+
 </head>
 
 <body>
