--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/styles/main.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="freelancer.css" type="text/css">
-    <title>freelancer</title>
+    <title>Beichou</title>
 
 </head>
 <body>
