--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="profile" src="profile.png" alt="">
+                    <img class="profile" src="myphoto.png" alt="" width="300px">
                     <div class="intro-text">
                         <span class="name">Beichou</span>
                     
@@ -127,7 +127,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="aboutme">
                     
                     <p>很愛臺灣，特別關注土地與生活的連結，更喜歡研究相關的一切。對於有興趣的事物，專注投入且喜歡挑戰，時常迸發各種可能性，追求創新。充滿熱情，且樂於分享。</p>
                     <br>
