--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
 <div class="row">
         <div class="menu"> 
          <a target="_new" href="food2.html">  
-        <img src="1.png" class="img-responsive" alt="" height="300px" /> 
+        <img src="1.png" class="img-responsive" alt="" height="100px" /> 
       <p>食記html</p>
    </a>
         </div>
         
         <div class="menu">
          <a target="_new" href="food.html">
-        <img src="2.png" class="img-responsive" alt="" height="300px" /> 
+        <img src="2.png" class="img-responsive" alt="" height="100px" /> 
         <p>食記css</p>
            </a>
         </div>
 
       <div class="menu">  
 <a target="_new" href="resume.html">
-      <img src="3.png" class="img-responsive" alt="" height="300px" /> 
+      <img src="3.png" class="img-responsive" alt="" height="100px" /> 
        <p>履歷html</p>
     </a>
       </div>
@@ -93,21 +93,21 @@
 <div class="row">
         <div class="menu"> 
 <a target="_new" href="resume2.html">
-        <img src="4.png" class="img-responsive" alt="" height="300px" /> 
+        <img src="4.png" class="img-responsive" alt="" height="100px" /> 
           <p>履歷css</p>
            </a>
         </div>
         
         <div class="menu">
          <a target="_new" href="3.html">
-        <img src="5.png" class="img-responsive" alt="" height="300px" /> 
+        <img src="5.png" class="img-responsive" alt="" height="100px" /> 
           <p>三欄式</p> 
         </a>
         </div>
 
      <div class="menu">
          <a target="_new" href="rwd.html">
-        <img src="6.png" class="img-responsive" alt="" height="300px" /> 
+        <img src="6.png" class="img-responsive" alt="" height="100px" /> 
           <p> RWD </p> 
         </a>
         </div>
@@ -115,8 +115,8 @@
 
  <div class="menu">
          <a target="_new" href="freelancer.html">
-        <img src="7.png" class="img-responsive" alt="" height="300px" /> 
-          <p> RWD </p> 
+        <img src="7.png" class="img-responsive" alt="" height="100px" /> 
+          <p> freelancer </p> 
         </a>
         </div>
 </div>
